objects/JBCXM__ScorecardConfig__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This object is used to store the Scorecard global configuration</description>
    <fields>
        <fullName>JBCXM__CustomerRollup__c</fullName>
        <description>This is used to specify what mechanism you are using to calculate the customer overall score. For Example - Disabled, Weight, Sum</description>
        <label>Customer Rollup</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__HistoryTrackingFrequency__c</fullName>
        <label>History Tracking Frequency</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__IsHistoryEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Scorecard History Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__OverrideCustomer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is not applicable if  Customer roll up is &quot;Disabled&quot;</description>
        <label>OverrideCustomer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__ScorecardEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This is used to check whether the Scorecard is enabled or not.</description>
        <label>Is Scorecard Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__TrackHistory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used to enable/disable the history tracking.</description>
        <label>TrackHistory</label>
        <type>Checkbox</type>
    </fields>
    <label>Scorecard Configuration</label>
</CustomObject>